[gd_scene load_steps=10 format=3 uid="uid://dsw08e6ly77s7"]

[ext_resource type="Theme" uid="uid://2dbhct4wbreo" path="res://screens/title-theme.tres" id="1_82gtl"]
[ext_resource type="Script" path="res://screens/title.gd" id="2_5es1b"]
[ext_resource type="PackedScene" uid="uid://bwm4dbsp6kt31" path="res://screens/music-bg.tscn" id="3_6mlm0"]
[ext_resource type="Texture2D" uid="uid://cmd7qbws0xws4" path="res://objects/ball/ball.png" id="3_cu7fc"]
[ext_resource type="PackedScene" uid="uid://rrl2n8nyo0wb" path="res://objects/ball/custom-sprite.tscn" id="5_b1las"]

[sub_resource type="AtlasTexture" id="AtlasTexture_vrxcl"]
atlas = ExtResource("3_cu7fc")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hxray"]
atlas = ExtResource("3_cu7fc")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kim5q"]
atlas = ExtResource("3_cu7fc")
region = Rect2(64, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_m0rb0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vrxcl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hxray")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kim5q")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Title" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_82gtl")
script = ExtResource("2_5es1b")

[node name="MusicBG" parent="." instance=ExtResource("3_6mlm0")]
layout_mode = 1
audio_bus_output = "Music"
vu_count = 32

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 48
alignment = 1

[node name="Ball" type="AnimatedSprite2D" parent="VBoxContainer"]
texture_filter = 1
position = Vector2(635, 350)
scale = Vector2(18, 18)
sprite_frames = SubResource("SpriteFrames_m0rb0")
autoplay = "default"

[node name="CustomSprite" parent="VBoxContainer" instance=ExtResource("5_b1las")]
texture_filter = 1
position = Vector2(635, 350)
scale = Vector2(18, 18)

[node name="Label" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.341176, 0, 0.368627, 1)
theme_override_constants/outline_size = 40
theme_override_font_sizes/normal_font_size = 64
bbcode_enabled = true
text = "[center][wave freq=10 amp=120]ROLL![/wave][/center]"
fit_content = true

[node name="Buttons" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="StartGame" type="Button" parent="VBoxContainer/Buttons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(512, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../ClearData")
focus_neighbor_bottom = NodePath("../Customize")
text = "Start game"

[node name="Customize" type="Button" parent="VBoxContainer/Buttons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(512, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../StartGame")
focus_neighbor_bottom = NodePath("../HowToPlay")
text = "Customize"

[node name="HowToPlay" type="Button" parent="VBoxContainer/Buttons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(512, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../Customize")
focus_neighbor_bottom = NodePath("../ClearData")
text = "How to play"

[node name="ClearData" type="Button" parent="VBoxContainer/Buttons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(512, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../HowToPlay")
focus_neighbor_bottom = NodePath("../StartGame")
text = "Clear data"
